--- a/people.html
+++ b/people.html
@@ -493,8 +493,8 @@ $('.title').remove()
 <div class="row">
 <div class="row">
 <div class="col-lg-7">
-<p><strong>Joelee Tooley, Research technician</strong></p>
-<p>Joelee works on our NSF project on urban evolution with eastern gray squirrels, assisting with camera trapping, live-trapping, and database management.</p>
+<p><strong>Dr. Jesse Borden, Postdoctoral associate</strong></p>
+<p>Dr. Borden is investigating spatial variation in coat color in gray squirrel as part of our NSF project on urban evolution.</p>
 <p><strong>Undergraduate students: Ruben Navarro, Devon Adams, Hannah Huston</strong></p>
 <p>Ruben, Devon, and Hannah are comparing ectoparasite loads between color morphs of eastern gray squirrels.</p>
 </div>
@@ -504,6 +504,8 @@ $('.title').remove()
 </div>
 <div id="former-lab-members" class="section level3">
 <h3><strong>Former lab members</strong></h3>
+<p><strong>Joelee Tooley, Research technician</strong></p>
+<p>Joelee worked on our NSF project on urban evolution with eastern gray squirrels, assisting with camera trapping, live-trapping, and database management.</p>
 <p><strong><a href="https://johnpvanek.weebly.com/" target="_blank">Dr. John Vanek, Postdoctoral associate</a></strong></p>
 <p>John worked on our NSF project on urban evolution with eastern gray squirrels. John developed our trapping methods and led a translocation experiment to test for differential survival between color morphs in urban and rural environments. John is currently a Zoologist with the New York Natural Heritage Program.</p>
 <p><strong>Richard Rich, Research technician</strong></p>
@@ -559,7 +561,7 @@ $('.title').remove()
 <br>
 <br>
 <br>
-<p>Last modified November 2022</p>
+<p>Last modified January 2023</p>
 </center>
 </div>
 
