--- a/publications.html
+++ b/publications.html
@@ -489,7 +489,7 @@ $('.title').remove()
 <hr>
 <div id="section" class="section level3">
 <h3>2022</h3>
-<p>Alexander, N.B., <strong>B.J. Cosentino,</strong> and R.L. Schooley.Testing the niche reduction hypothesis for a fossorial rodent (Geomys bursarius) experiencing agricultural intensification. Ecology and Evolution. In press.</p>
+<p>Alexander, N.B., <strong>B.J. Cosentino,</strong> and R.L. Schooley.Testing the niche reduction hypothesis for a fossorial rodent (Geomys bursarius) experiencing agricultural intensification. Ecology and Evolution 12:e9559. <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ece3.9559">Link</a></p>
 <p><strong>Cosentino, B.J.</strong> and J.P. Gibbs. Parallel evolution of urban-rural clines in melanism in a widespread mammal. Scientific Reports 12:1752. <a href="https://www.nature.com/articles/s41598-022-05746-2">Link</a></p>
 </div>
 <div id="section-1" class="section level3">
@@ -564,6 +564,7 @@ $('.title').remove()
 </div>
 <div id="other-publications" class="section level3">
 <h3>Other publications</h3>
+<p><strong>Cosentino, B.J.</strong> 2023. Trend estimation and effects of landscape composition on the distribution of Illinois chorus frogs (<em>Pseudacris streckeri illinoensis</em>) in Illinois. Illinois Department of Natural Resources, Springfield, Illinois. <a href="documents/cosentino_icf_2023.pdf">PDF</a></p>
 <p><strong>Cosentino, B.J.</strong> 2018. Examining occupancy and detection probability after three years of monitoring for the Illinois chorus frog (<em>Pseudacris streckeri illinoensis</em>). Illinois Department of Natural Resources, Springfield, Illinois. <a href="documents/cosentino_icf_2018.pdf">PDF</a></p>
 <p><strong>Cosentino, B.J.</strong> 2014. Monitoring plan to detect trends in occupancy of Illinois chorus frogs (<em>Pseudacris streckeri illinoensis</em>). Illinois Department of Natural Resources, Springfield, Illinois. <a href="documents/cosentino_icf_2014.pdf">PDF</a></p>
 <p>Hager, S.B., and <strong>B.J. Cosentino</strong>. 2014. Surveying for bird carcasses resulting from window collisions: a standardized protocol. PeerJ PrePrints 2:e406v1. <a href="documents/hager_peerjpre_2014.pdf">PDF</a></p>
@@ -577,7 +578,7 @@ $('.title').remove()
 <br>
 <br>
 <br>
-<p>Last modified November 2022</p>
+<p>Last modified January 2023</p>
 </center>
 </div>
 
