--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <title>Bradley J. Cosentino</title>
 
+<script src="site_libs/header-attrs-2.21/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
@@ -29,9 +30,8 @@
        code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
        pre:not([class]) { background-color: white }</style>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<script src="site_libs/accessible-code-block-0.0.1/empty-anchor.js"></script>
-<link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.4.0/css/all.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.4.0/css/v4-shims.min.css" rel="stylesheet" />
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
@@ -231,6 +231,7 @@
 
 
 
+
 <link rel="stylesheet" href="../styles.css" type="text/css" />
 
 
@@ -255,6 +256,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -312,11 +316,15 @@ $(document).ready(function () {
     href = "index.html";
   var menuAnchor = $('a[href="' + href + '"]');
 
-  // mark it active
-  menuAnchor.tab('show');
-
-  // if it's got a parent navbar menu mark it active as well
-  menuAnchor.closest('li.dropdown').addClass('active');
+  // mark the anchor link active (and if it's in a dropdown, also mark that active)
+  var dropdown = menuAnchor.closest('li.dropdown');
+  if (window.bootstrap) { // Bootstrap 4+
+    menuAnchor.addClass('active');
+    dropdown.find('> .dropdown-toggle').addClass('active');
+  } else { // Bootstrap 3
+    menuAnchor.parent().addClass('active');
+    dropdown.addClass('active');
+  }
 
   // Navbar adjustments
   var navHeight = $(".navbar").first().height() + 15;
@@ -345,8 +353,8 @@ $(document).ready(function () {
   border-radius: 4px;
 }
 
-.tabset-dropdown > .nav-tabs > li.active:before {
-  content: "";
+.tabset-dropdown > .nav-tabs > li.active:before, .tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "\e259";
   font-family: 'Glyphicons Halflings';
   display: inline-block;
   padding: 10px;
@@ -354,16 +362,9 @@ $(document).ready(function () {
 }
 
 .tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
-  content: "&#xe258;";
-  border: none;
-}
-
-.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
-  content: "";
+  content: "\e258";
   font-family: 'Glyphicons Halflings';
-  display: inline-block;
-  padding: 10px;
-  border-right: 1px solid #ddd;
+  border: none;
 }
 
 .tabset-dropdown > .nav-tabs > li.active {
@@ -407,7 +408,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -424,9 +425,6 @@ $(document).ready(function () {
 </li>
 <li>
   <a href="publications.html">Publications</a>
-</li>
-<li>
-  <a href="citizensci.html">Citizen science</a>
 </li>
 <li>
   <a href="teaching.html">Teaching</a>
@@ -488,22 +486,28 @@ $('.title').remove()
 <div class="row">
 <div class="row">
 <div class="col-lg-6">
-<p><br> <img src="images/index_summer_research.jpg" style="width:100%; border:5px solid; margin-bottom: 0px; margin-left: 50px; margin-right: 0px" align="left"></p>
+<p><br>
+<img src="images/index_summer_research.jpg" style="width:100%; border:5px solid; margin-bottom: 0px; margin-left: 50px; margin-right: 0px" align="left"></p>
 </div>
 <div class="col-lg-1">
 
 </div>
-<div class="col-lg-5">
-<h3 id="bradley-j.-cosentino"><strong>Bradley J. Cosentino</strong></h3>
-<h4 id="wildlife-ecology-evolution">Wildlife ecology &amp; evolution</h4>
+<div id="bradley-j.-cosentino" class="section level3 col-lg-5">
+<h3><strong>Bradley J. Cosentino</strong></h3>
+<div id="evolution-ecology" class="section level4">
+<h4>Evolution &amp; ecology</h4>
 <p>Associate Professor &amp; Chair<br />
-<a href="https://www2.hws.edu/academics/biology/" target="_blank">Department of Biology</a><br />
-<a href="https://www2.hws.edu/" target="_blank">Hobart &amp; William Smith Colleges</a><br />
+<a href="https://www2.hws.edu/academics/biology/" target="_blank">Department
+of Biology</a><br />
+<a href="https://www2.hws.edu/" target="_blank">Hobart &amp; William
+Smith Colleges</a><br />
 300 Pulteney St. <br />
 Geneva, NY 14456</p>
 <p>Office: Eaton 203<br />
 Phone: 315.781.4602<br />
-Email: <a href="mailto:cosentino@hws.edu" class="email">cosentino@hws.edu</a></p>
+Email: <a href="mailto:cosentino@hws.edu"
+class="email">cosentino@hws.edu</a></p>
+</div>
 </div>
 <div style="height:300px;">
 
@@ -511,7 +515,7 @@ Email: <a href="mailto:cosentino@hws.edu" class="email">cosentino@hws.edu</a></p
 <p>
 <!--- add some padding -->
 </p>
-<p><img src="images/cloud5.png" width="65%" style="display: block; margin: auto;" /></p>
+<p><img src="images/wordCloud.png" width="45%" style="display: block; margin: auto;" /></p>
 
 <div id="footer">
 <center>
@@ -519,7 +523,7 @@ Email: <a href="mailto:cosentino@hws.edu" class="email">cosentino@hws.edu</a></p
 <br>
 <br>
 <br>
-<p>Last modified November 2022</p>
+<p>Last modified October 2023</p>
 </center>
 </div>
 
