--- a/teaching.html
+++ b/teaching.html
@@ -13,6 +13,7 @@
 
 <title>Bradley J. Cosentino</title>
 
+<script src="site_libs/header-attrs-2.21/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
@@ -29,9 +30,8 @@
        code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
        pre:not([class]) { background-color: white }</style>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<script src="site_libs/accessible-code-block-0.0.1/empty-anchor.js"></script>
-<link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.4.0/css/all.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.4.0/css/v4-shims.min.css" rel="stylesheet" />
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
@@ -231,6 +231,7 @@
 
 
 
+
 <link rel="stylesheet" href="../styles.css" type="text/css" />
 
 
@@ -255,6 +256,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -312,11 +316,15 @@ $(document).ready(function () {
     href = "index.html";
   var menuAnchor = $('a[href="' + href + '"]');
 
-  // mark it active
-  menuAnchor.tab('show');
-
-  // if it's got a parent navbar menu mark it active as well
-  menuAnchor.closest('li.dropdown').addClass('active');
+  // mark the anchor link active (and if it's in a dropdown, also mark that active)
+  var dropdown = menuAnchor.closest('li.dropdown');
+  if (window.bootstrap) { // Bootstrap 4+
+    menuAnchor.addClass('active');
+    dropdown.find('> .dropdown-toggle').addClass('active');
+  } else { // Bootstrap 3
+    menuAnchor.parent().addClass('active');
+    dropdown.addClass('active');
+  }
 
   // Navbar adjustments
   var navHeight = $(".navbar").first().height() + 15;
@@ -345,8 +353,8 @@ $(document).ready(function () {
   border-radius: 4px;
 }
 
-.tabset-dropdown > .nav-tabs > li.active:before {
-  content: "";
+.tabset-dropdown > .nav-tabs > li.active:before, .tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "\e259";
   font-family: 'Glyphicons Halflings';
   display: inline-block;
   padding: 10px;
@@ -354,16 +362,9 @@ $(document).ready(function () {
 }
 
 .tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
-  content: "&#xe258;";
-  border: none;
-}
-
-.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
-  content: "";
+  content: "\e258";
   font-family: 'Glyphicons Halflings';
-  display: inline-block;
-  padding: 10px;
-  border-right: 1px solid #ddd;
+  border: none;
 }
 
 .tabset-dropdown > .nav-tabs > li.active {
@@ -407,7 +408,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -424,9 +425,6 @@ $(document).ready(function () {
 </li>
 <li>
   <a href="publications.html">Publications</a>
-</li>
-<li>
-  <a href="citizensci.html">Citizen science</a>
 </li>
 <li>
   <a href="teaching.html">Teaching</a>
@@ -501,6 +499,7 @@ $('.title').remove()
 <li>Conservation Biology (BIOL316)</li>
 <li>Human Nature (BIOL460)</li>
 <li>Biology of the City (BIOL460)</li>
+<li>Animal color (BIOL460)</li>
 </ul>
 </div>
 <div class="col-lg-5">
@@ -512,10 +511,27 @@ Sampling a pond for amphibians at Harriet Hollister State Park, NY.
 </div>
 </div>
 </div>
-<div id="students-interested-in-research-experiences" class="section level3">
+<div id="students-interested-in-research-experiences"
+class="section level3">
 <h3><strong>Students interested in research experiences</strong></h3>
-<p>I’m very interested in providing research opportunities to undergraduates who are excited about ecology, evolutionary biology, or wildlife conservation. My research page and publications should give you a good idea of the type of projects going on in my lab. Students conduct research with me during the academic year through independent study and the <a href="https://www.hws.edu/academics/curr_honors.aspx" target="_blank">HWS Honors Program</a>, and students work with me in the summer as part of the <a href="https://www.hws.edu/academics/undergrad_ops.aspx" target="_blank">HWS Summer Research Program</a>. Research opportunities in my lab may involve field sampling, molecular genetics in the lab, statistical and geospatial analysis of big datasets, or a mix of these approaches.</p>
-<p>Extensive research experience is NOT required to work with me. The most important things I look for in research students are excitement about ecology and evolution and a strong work ethic. If you are interested in working with me, please stop by my office or email me with a description of your interests.</p>
+<p>I’m very interested in providing research opportunities to
+undergraduates who are excited about ecology, evolutionary biology, or
+wildlife conservation. My research page and publications should give you
+a good idea of the type of projects going on in my lab. Students conduct
+research with me during the academic year through independent study and
+the
+<a href="https://www.hws.edu/academics/curr_honors.aspx" target="_blank">HWS
+Honors Program</a>, and students work with me in the summer as part of
+the
+<a href="https://www.hws.edu/academics/undergrad_ops.aspx" target="_blank">HWS
+Summer Research Program</a>. Research opportunities in my lab may
+involve field sampling, molecular genetics in the lab, statistical and
+geospatial analysis of big datasets, or a mix of these approaches.</p>
+<p>Extensive research experience is NOT required to work with me. The
+most important things I look for in research students are excitement
+about ecology and evolution and a strong work ethic. If you are
+interested in working with me, please stop by my office or email me with
+a description of your interests.</p>
 </div>
 </div>
 
@@ -525,7 +541,7 @@ Sampling a pond for amphibians at Harriet Hollister State Park, NY.
 <br>
 <br>
 <br>
-<p>Last modified November 2022</p>
+<p>Last modified October 2023</p>
 </center>
 </div>
 
