--- a/publications.html
+++ b/publications.html
@@ -486,16 +486,29 @@ $('.title').remove()
 <h2><strong>Publications</strong></h2>
 <hr>
 <div id="section" class="section level3">
+<h3>2024</h3>
+<p>Alexander, N., <strong>B.J. Cosentino</strong>, and R.L. Schooley.
+2024. Partitioning genetic structure of a subterranean rodent at
+multiple spatial scales: accounting for isolation by barriers, distance,
+and environment. Landscape Ecology 39:92. <a
+href="https://link.springer.com/article/10.1007/s10980-024-01878-0">Link</a></p>
+<p>Fusco, N., <strong>B.J. Cosentino</strong>, et al. 2024. Population
+genomic structure of a widespread, urban-dwelling mammal. Molecular
+Ecology 33:e17230. <a
+href="documents/fusco_etal_2024_MolecularEcology.pdf">PDF</a></p>
+<p>Wagnon, C., <strong>B.J. Cosentino</strong>, and R.L. Schooley. 2024.
+Linking animal personality and habitat restoration for a keystone
+species. Animal Behaviour 212:13-30. <a
+href="https://www.sciencedirect.com/science/article/pii/S0003347224000836">Link</a></p>
+</div>
+<div id="section-1" class="section level3">
 <h3>2023</h3>
-<p>Fusco, N., <strong>B.J. Cosentino</strong>, et al. In press.
-Population genomic structure of a widespread, urban-dwelling mammal.
-Molecular Ecology.</p>
 <p><strong>Cosentino, B.J.,</strong> J.P. Vanek, and J.P. Gibbs. Rural
 selection drives the evolution of an urban-rural cline in coat color in
 gray squirrels. Ecology and Evolution 13:e10544 <a
 href="https://onlinelibrary.wiley.com/doi/10.1002/ece3.10544">Link</a></p>
 </div>
-<div id="section-1" class="section level3">
+<div id="section-2" class="section level3">
 <h3>2022</h3>
 <p><strong>Cosentino, B.J.</strong> and J.P. Gibbs. Parallel evolution
 of urban-rural clines in melanism in a widespread mammal. Scientific
@@ -507,7 +520,7 @@ Schooley.Testing the niche reduction hypothesis for a fossorial rodent
 and Evolution 12:e9559. <a
 href="https://onlinelibrary.wiley.com/doi/full/10.1002/ece3.9559">Link</a></p>
 </div>
-<div id="section-2" class="section level3">
+<div id="section-3" class="section level3">
 <h3>2021</h3>
 <p>Elmore, J.A., S.B. Hager, <strong>B.J. Cosentino</strong>, et
 al. Correlates of bird collisions with buildings across three North
@@ -518,14 +531,14 @@ and biomass in post-agricultural forests: Lessons learned with new
 spatial tools. Applied Vegetation Science 24:e12552. <a
 href="documents/brubaker_appvegsci_2021.pdf">PDF</a></p>
 </div>
-<div id="section-3" class="section level3">
+<div id="section-4" class="section level3">
 <h3>2020</h3>
 <p>Wagnon, C.J., R.L. Schooley, and <strong>B.J. Cosentino</strong>.
 Shrub encroachment creates a dynamic landscape of fear for desert
 lagomorphs via multiple pathways. Ecosphere 11(9):e03240. <a
 href="documents/wagnon_ecosphere_2020.pdf">PDF</a></p>
 </div>
-<div id="section-4" class="section level3">
+<div id="section-5" class="section level3">
 <h3>2019</h3>
 <p><strong>Cosentino, B.J.</strong>, R.L. Schooley, B.T. Bestelmeyer, H.
 Campos, and L.M. Burkett. 2019. Does habitat disturbance promote
@@ -552,7 +565,7 @@ course implementation: examining downstream impacts on teaching
 practices and student learning at 4-year institutions. BioScience
 69:47-58. <a href="documents/kenyon_bioscience_2019.pdf">PDF</a></p>
 </div>
-<div id="section-5" class="section level3">
+<div id="section-6" class="section level3">
 <h3>2018</h3>
 <p><strong>Cosentino, B.J.</strong> and K.M. Brubaker. 2018. Effects of
 land use legacies and habitat fragmentation on salamander abundance.
@@ -571,7 +584,7 @@ Metapopulation dynamics of wetland species. In: Finlayson, C., et al.,
 editors. The Wetland Book. Springer, Dordrecth. <a
 href="documents/schooley_wetland_2018.pdf">PDF</a></p>
 </div>
-<div id="section-6" class="section level3">
+<div id="section-7" class="section level3">
 <h3>2017</h3>
 <p><strong>Cosentino, B.J.</strong>, J.D. Moore, N.E. Karraker, M.
 Ouellet, and J.P. Gibbs. 2017. Evolutionary response to global change:
@@ -593,14 +606,14 @@ spatial scales and regions in the eastern and central United States.
 Diversity and Distributions 23:158-170. <a
 href="documents/marsh_divdist_2017.pdf">PDF</a></p>
 </div>
-<div id="section-7" class="section level3">
+<div id="section-8" class="section level3">
 <h3>2016</h3>
 <p><strong>Cosentino, B.J.</strong>, and D.C. Droney. 2016. Movement
 behaviour of woodland salamanders is repeatable and varies with forest
 age in a fragmented landscape. Animal Behaviour 121:137-146. <a
 href="documents/cosentino_anbeh_2016.pdf">PDF</a></p>
 </div>
-<div id="section-8" class="section level3">
+<div id="section-9" class="section level3">
 <h3>2015</h3>
 <p><strong>Cosentino, B.J.</strong>, R.L. Schooley, B.T. Bestelmeyer,
 A.J. McCarthy, and K. Sierzega. 2015. Rapid genetic restoration of a
@@ -608,7 +621,7 @@ keystone species exhibiting delayed demographic response. Molecular
 Ecology. 24:6120–6133. <a
 href="documents/cosentino_molecol_2015.pdf">PDF</a></p>
 </div>
-<div id="section-9" class="section level3">
+<div id="section-10" class="section level3">
 <h3>2014</h3>
 <p><strong>Cosentino, B.J.</strong>, D.M. Marsh, K.S. Jones, et
 al. 2014. Citizen science reveals widespread negative effects of roads
@@ -625,7 +638,7 @@ recovery of a keystone species (Dipodomys spectabilis) after landscape
 restoration. Landscape Ecology 29:665–675. <a
 href="documents/cosentino_landecol_2014.pdf">PDF</a></p>
 </div>
-<div id="section-10" class="section level3">
+<div id="section-11" class="section level3">
 <h3>2013</h3>
 <p><strong>Cosentino, B.J.</strong>, R.L. Schooley, B.T. Bestelmeyer,
 and J.M. Coffman. 2013. Response of lizard community structure to desert
@@ -642,7 +655,7 @@ cameras and basking rafts: a pilot study in Illinois, USA. Transactions
 of the Illinois State Academy of Science 106:15–21. <a
 href="documents/bluett_ias_2013.pdf">PDF</a></p>
 </div>
-<div id="section-11" class="section level3">
+<div id="section-12" class="section level3">
 <h3>2012</h3>
 <p><strong>Cosentino, B.J.</strong>, C.A. Phillips, R.L. Schooley, W.H.
 Lowe, and M.R. Douglas. 2012. Linking extinction-colonization dynamics
@@ -658,7 +671,7 @@ Cosentino</strong>. 2012. Decoupling of genetic and phenotypic
 divergence in a headwater landscape. Molecular Ecology 21:2399–2409. <a
 href="documents/lowe_molecol_2012.pdf">PDF</a></p>
 </div>
-<div id="section-12" class="section level3">
+<div id="section-13" class="section level3">
 <h3>2011</h3>
 <p><strong>Cosentino, B.J.</strong>, R.L. Schooley, and C.A. Phillips.
 2011. Spatial connectivity moderates the effect of predatory fish on
