--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <title>Bradley J. Cosentino</title>
 
-<script src="site_libs/header-attrs-2.21/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.27/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
@@ -30,8 +30,8 @@
        code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
        pre:not([class]) { background-color: white }</style>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<link href="site_libs/font-awesome-6.4.0/css/all.min.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-6.4.0/css/v4-shims.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.4.2/css/all.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.4.2/css/v4-shims.min.css" rel="stylesheet" />
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
@@ -496,7 +496,7 @@ $('.title').remove()
 <h3><strong>Bradley J. Cosentino</strong></h3>
 <div id="evolution-ecology" class="section level4">
 <h4>Evolution &amp; ecology</h4>
-<p>Associate Professor &amp; Chair<br />
+<p>Professor<br />
 <a href="https://www2.hws.edu/academics/biology/" target="_blank">Department
 of Biology</a><br />
 <a href="https://www2.hws.edu/" target="_blank">Hobart &amp; William
@@ -523,7 +523,7 @@ class="email">cosentino@hws.edu</a></p>
 <br>
 <br>
 <br>
-<p>Last modified October 2023</p>
+<p>Last modified July 2024</p>
 </center>
 </div>
 
