--- a/publications.html
+++ b/publications.html
@@ -13,7 +13,7 @@
 
 <title>Bradley J. Cosentino</title>
 
-<script src="site_libs/header-attrs-2.21/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.27/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
@@ -30,8 +30,8 @@
        code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
        pre:not([class]) { background-color: white }</style>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<link href="site_libs/font-awesome-6.4.0/css/all.min.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-6.4.0/css/v4-shims.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.4.2/css/all.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.4.2/css/v4-shims.min.css" rel="stylesheet" />
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
@@ -487,16 +487,26 @@ $('.title').remove()
 <hr>
 <div id="section" class="section level3">
 <h3>2024</h3>
+<p>Alexander, N., A. de Flamingh, <strong>B.J. Cosentino</strong>, and
+R.L. Schooley. Phylogenetic assessment within a species complex of a
+subterranean roden (<em>Geomys bursarius</em>) with conservation
+implications for isolated subspecies. Heredity, <a
+href="https://academic.oup.com/jhered/advance-article/doi/10.1093/jhered/esae035/7710157?searchresult=1">Link</a></p>
 <p>Alexander, N., <strong>B.J. Cosentino</strong>, and R.L. Schooley.
-2024. Partitioning genetic structure of a subterranean rodent at
-multiple spatial scales: accounting for isolation by barriers, distance,
-and environment. Landscape Ecology 39:92. <a
+Partitioning genetic structure of a subterranean rodent at multiple
+spatial scales: accounting for isolation by barriers, distance, and
+environment. Landscape Ecology 39:92. <a
 href="https://link.springer.com/article/10.1007/s10980-024-01878-0">Link</a></p>
-<p>Fusco, N., <strong>B.J. Cosentino</strong>, et al. 2024. Population
-genomic structure of a widespread, urban-dwelling mammal. Molecular
-Ecology 33:e17230. <a
+<p>Fusco, N., <strong>B.J. Cosentino</strong>, et al. Population genomic
+structure of a widespread, urban-dwelling mammal. Molecular Ecology
+33:e17230. <a
 href="documents/fusco_etal_2024_MolecularEcology.pdf">PDF</a></p>
-<p>Wagnon, C., <strong>B.J. Cosentino</strong>, and R.L. Schooley. 2024.
+<p>Tennant, J.H., <strong>B.J. Cosentino</strong>, L.B. Cleckner, K.M.
+Brubaker, and N.R. Razavi. Methylmercury concentrations more strongly
+associated with trait variation than food web position in plethodontid
+salamanders. Environmental Toxicology and Chemistry. <a
+href="https://setac.onlinelibrary.wiley.com/doi/10.1002/etc.5947?af=R">Link</a></p>
+<p>Wagnon, C., <strong>B.J. Cosentino</strong>, and R.L. Schooley.
 Linking animal personality and habitat restoration for a keystone
 species. Animal Behaviour 212:13-30. <a
 href="https://www.sciencedirect.com/science/article/pii/S0003347224000836">Link</a></p>
@@ -741,7 +751,7 @@ href="documents/cosentino_turtle_2008.pdf">PDF</a></p>
 <br>
 <br>
 <br>
-<p>Last modified October 2023</p>
+<p>Last modified July 2024</p>
 </center>
 </div>
 
